# e13_wash_backend

./: .gitignore  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  dockerfile  main.py  pyproject.toml
.github/workflows/: ci.yml
app/celery/: celary_app.py  tasks.py
app/core/: config.py
app/db/: clickhouse.py  postgres.py  redis.py
app/models/: __init__.py  machine.py  payment_method.py  transaction.py  user.py
app/routers/v1/: admin.py  analytics.py  reports.py
app/schemas/: machine.py  report.py  transaction.py
app/services/: analytics.py  crestwave.py  reports.py
app/worker/: celary_app.py  tasks.py
migrations/: env.py
migrations/versions/: 3dd75631fc40_make_machine_id_non_autoincrement_to_.py  815203f8f73a_add_payment_methods_update_transactions_.py  995d21ee762b_init.py
